--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
         <div class="overlay">
           <div class="container">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="hero-btn">Замовити послугу</button>
+            <button type="button" class="hero-btn" data-modal-open>
+              Замовити послугу
+            </button>
+            <div class="backdrop is-hidden" data-modal>
+              <div class="modal">
+                <batton class="batton-close" data-modal-close>
+                  <svg class="hero-close" width="18"
+                   height="18">
+                  <use href="./images/icons.svg#close-black-18dp"></use></svg>
+                </batton>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -617,5 +628,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
