--- a/portfolio.html
+++ b/portfolio.html
@@ -79,13 +79,24 @@
           <ul class="list portfolio-list">
             <!-- <li class="portfolio-direction grid-item"> -->
             <li class="portfolio-direction item">
-              <a class="link link-hover" href=""
-                ><img
-                  src="./images/portfolio/portfolio-1.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio/portfolio-1.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="portfolio-dir">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -94,13 +105,23 @@
             </li>
             <!-- <li class="portfolio-direction grid-item"> -->
             <li class="portfolio-direction item">
-              <a class="link link-hover" href=""
-                ><img
-                  src="./images/portfolio/portfolio-2.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio/portfolio-2.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-dir">
                   <h2 class="portfolio-title">
                     Постер New Orlean vs Golden Star
@@ -111,13 +132,23 @@
             </li>
             <!-- <li class="portfolio-direction grid-item"> -->
             <li class="portfolio-direction item">
-              <a class="link link-hover" href=""
-                ><img
-                  src="./images/portfolio/portfolio-3.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio/portfolio-3.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-dir">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -126,13 +157,23 @@
             </li>
             <!-- <li class="portfolio-direction grid-item"> -->
             <li class="portfolio-direction item">
-              <a class="link link-hover" href=""
-                ><img
-                  src="./images/portfolio/portfolio-4.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio/portfolio-4.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-dir">
                   <h2 class="portfolio-title">Проєкт Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -141,13 +182,23 @@
             </li>
             <!-- <li class="portfolio-direction grid-item"> -->
             <li class="portfolio-direction item">
-              <a class="link link-hover" href=""
-                ><img
-                  src="./images/portfolio/portfolio-5.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio/portfolio-5.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-dir">
                   <h2 class="portfolio-title">Проєкт Boxes</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -156,13 +207,23 @@
             </li>
             <!-- <li class="portfolio-direction grid-item"> -->
             <li class="portfolio-direction item">
-              <a class="link link-hover" href=""
-                ><img
-                  src="./images/portfolio/portfolio-6.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio/portfolio-6.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-dir">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -171,13 +232,23 @@
             </li>
             <!-- <li class="portfolio-direction grid-item"> -->
             <li class="portfolio-direction item">
-              <a class="link link-hover" href=""
-                ><img
-                  src="./images/portfolio/portfolio-7.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio/portfolio-7.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-dir">
                   <h2 class="portfolio-title">Видання Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -186,13 +257,23 @@
             </li>
             <!-- <li class="portfolio-direction grid-item"> -->
             <li class="portfolio-direction item">
-              <a class="link link-hover" href=""
-                ><img
-                  src="./images/portfolio/portfolio-8.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio/portfolio-8.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-dir">
                   <h2 class="portfolio-title">Проєкт LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -201,13 +282,23 @@
             </li>
             <!-- <li class="portfolio-direction grid-item"> -->
             <li class="portfolio-direction item">
-              <a class="link link-hover" href=""
-                ><img
-                  src="./images/portfolio/portfolio-9.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+              <a class="link portfolio-link" href="">
+                <div class="portfolio-image">
+                  <img
+                    src="./images/portfolio/portfolio-9.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-dir">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Додаток</p>
