--- a/index.html
+++ b/index.html
@@ -65,12 +65,97 @@
               Замовити послугу
             </button>
             <div class="backdrop is-hidden" data-modal>
-              <div class="modal">
+              <div class="modal-wrapper">
                 <batton class="batton-close" data-modal-close>
-                  <svg class="hero-close" width="18"
-                   height="18">
-                  <use href="./images/icons.svg#close-black-18dp"></use></svg>
+                  <svg class="hero-close" width="18" height="18">
+                    <use href="./images/icons.svg#close-black-18dp"></use>
+                  </svg>
                 </batton>
+                <div>
+                  <form class="modal-form">
+                    <b class="modal-title"
+                      >Залиште свої дані, ми вам передзвонимо</b
+                    >
+                    <!-- дані відвідувача -->
+
+                    <label class="form-field">
+                      <span class="form-group">Ім'я</span>
+                      <input
+                        class="form-input"
+                        type="text"
+                        name="user-name"
+                        required
+                      />
+                      <svg class="modal-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-person"></use>
+                      </svg>
+                    </label>
+
+                    <label class="form-field">
+                      <span class="form-group">Телефон</span>
+                      <input
+                        class="form-input"
+                        type="tel"
+                        name="user-phone"
+                        required
+                      />
+                      <svg class="modal-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-phone"></use>
+                      </svg>
+                    </label>
+
+                    <label class="form-field" for="mail">
+                      <span class="form-group">Пошта</span>
+                      <input
+                        class="form-input"
+                        type="email"
+                        name="user-mail"
+                        required
+                      />
+                      <svg class="modal-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-email"></use>
+                      </svg>
+                    </label>
+
+                    <div class="form-field form-textarea">
+                      <label class="form-group" for="comment">Коментар</label>
+                      <textarea
+                        class="comment"
+                        name="comment"
+                        rows="7"
+                        placeholder="Введіть текст"
+                      ></textarea>
+                    </div>
+
+                    <!-- політика прватності -->
+
+                    <div class="form-checkbox">
+                      <label class="form-group-policy">
+                        <input
+                          class="checkbox visually-hidden"
+                          type="checkbox"
+                        />
+
+                        <svg class="checkbox-vector" width="16" height="15">
+                          <use href="./images/icons.svg#icon-Vector"></use>
+                        </svg>
+
+                        <svg class="checkbox-check" width="16" height="15">
+                          <use href="./images/icons.svg#icon-check"></use>
+                        </svg>
+
+                        <span class="form-policy-desc"
+                          >Погоджуюся з розсилкою та приймаю
+                          <span class="modal-policy-span"
+                            >Умови договору</span
+                          ></span
+                        >
+                      </label>
+                    </div>
+
+                    <button class="submit-btn" type="submit">Відправити</button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
@@ -569,8 +654,8 @@
             </li>
           </ul>
         </div>
-        <div class="footer-socials element">
-          <p class="footer-title">приєднуйтесь</p>
+        <div class="footer-socials">
+          <b class="footer-title">приєднуйтесь</b>
           <ul class="list socials">
             <li class="socials-item">
               <a
@@ -626,6 +711,25 @@
             </li>
           </ul>
         </div>
+        <form class="footer-subscribe">
+          <b class="footer-title">Підпишіться на розсилку</b>
+          <div class="subscribe-items">
+            <input
+              class="subscribe-input"
+              type="email"
+              name="mail"
+              id="email"
+              placeholder="E-mail"
+            />
+            <label class="subscribe-label" for="email"></label>
+            <button type="subscribe" class="button-subscribe">
+              <span>Підписатися</span>
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
